--- a/Post/Base.lproj/Main.storyboard
+++ b/Post/Base.lproj/Main.storyboard
@@ -2889,8 +2889,23 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收件方式" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IRe-H2-4ZU">
-                                                    <rect key="frame" x="13" y="12.5" width="60" height="18"/>
+                                                    <rect key="frame" x="13" y="12" width="60" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jsU-ne-hP7">
+                                                    <rect key="frame" x="88" y="7" width="459" height="30"/>
+                                                    <state key="normal" title="协商">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="rgWayClick:" destination="Vfu-lE-lcj" eventType="touchUpInside" id="Mq7-0S-mBN"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&gt;" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MRs-cI-1vq">
+                                                    <rect key="frame" x="567" y="7.5" width="15" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -2898,6 +2913,11 @@
                                             <constraints>
                                                 <constraint firstItem="IRe-H2-4ZU" firstAttribute="leading" secondItem="9IS-E8-P0m" secondAttribute="leadingMargin" constant="5" id="DOO-36-Qjn"/>
                                                 <constraint firstAttribute="centerY" secondItem="IRe-H2-4ZU" secondAttribute="centerY" id="OSq-1A-fQe"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="MRs-cI-1vq" secondAttribute="trailing" constant="10" id="UYT-QM-eu4"/>
+                                                <constraint firstItem="MRs-cI-1vq" firstAttribute="leading" secondItem="jsU-ne-hP7" secondAttribute="trailing" constant="20" id="VA6-7y-x8L"/>
+                                                <constraint firstAttribute="centerY" secondItem="jsU-ne-hP7" secondAttribute="centerY" id="bLB-v9-pgb"/>
+                                                <constraint firstAttribute="centerY" secondItem="MRs-cI-1vq" secondAttribute="centerY" id="oyF-vW-IjR"/>
+                                                <constraint firstItem="jsU-ne-hP7" firstAttribute="leading" secondItem="IRe-H2-4ZU" secondAttribute="trailing" constant="15" id="xN7-Wi-jLc"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -2905,10 +2925,70 @@
                             </tableViewSection>
                             <tableViewSection id="JJC-9a-scn">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Jr5-qQ-dgP">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="74" id="Jr5-qQ-dgP">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Jr5-qQ-dgP" id="5dQ-g3-V1q">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取货时间段" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iHd-1n-60q">
+                                                    <rect key="frame" x="13" y="28" width="75" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&gt;" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kVz-TW-Jhy">
+                                                    <rect key="frame" x="567" y="22" width="15" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="始" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yFH-Rs-g8c">
+                                                    <rect key="frame" x="98" y="15" width="15" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="止" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAx-YT-rLH">
+                                                    <rect key="frame" x="98" y="43" width="15" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mUQ-1j-Fv8">
+                                                    <rect key="frame" x="118" y="9" width="429" height="30"/>
+                                                    <state key="normal">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="startTimeClick:" destination="Vfu-lE-lcj" eventType="touchUpInside" id="zqz-Zv-eK7"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hAT-on-pNq">
+                                                    <rect key="frame" x="118" y="37" width="429" height="30"/>
+                                                    <state key="normal">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="endTimeClick:" destination="Vfu-lE-lcj" eventType="touchUpInside" id="1Of-M5-v9r"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="yFH-Rs-g8c" firstAttribute="leading" secondItem="iHd-1n-60q" secondAttribute="trailing" constant="10" id="8l3-eI-xE0"/>
+                                                <constraint firstItem="hAT-on-pNq" firstAttribute="leading" secondItem="fAx-YT-rLH" secondAttribute="trailing" constant="5" id="Eat-2e-NlP"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="kVz-TW-Jhy" secondAttribute="trailing" constant="10" id="Jhj-SA-HKP"/>
+                                                <constraint firstItem="hAT-on-pNq" firstAttribute="centerY" secondItem="fAx-YT-rLH" secondAttribute="centerY" id="KRf-bW-wl5"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="fAx-YT-rLH" secondAttribute="bottom" constant="4.5" id="Lhm-tk-KEP"/>
+                                                <constraint firstItem="kVz-TW-Jhy" firstAttribute="leading" secondItem="hAT-on-pNq" secondAttribute="trailing" constant="20" id="LrL-zM-q73"/>
+                                                <constraint firstItem="yFH-Rs-g8c" firstAttribute="leading" secondItem="fAx-YT-rLH" secondAttribute="leading" id="MZE-s4-1u2"/>
+                                                <constraint firstItem="yFH-Rs-g8c" firstAttribute="centerY" secondItem="mUQ-1j-Fv8" secondAttribute="centerY" id="V4l-VJ-L4t"/>
+                                                <constraint firstAttribute="centerY" secondItem="iHd-1n-60q" secondAttribute="centerY" id="cAe-Ge-MbY"/>
+                                                <constraint firstItem="iHd-1n-60q" firstAttribute="leading" secondItem="5dQ-g3-V1q" secondAttribute="leadingMargin" constant="5" id="dMu-39-xaC"/>
+                                                <constraint firstAttribute="centerY" secondItem="kVz-TW-Jhy" secondAttribute="centerY" id="dTw-IL-pFk"/>
+                                                <constraint firstItem="kVz-TW-Jhy" firstAttribute="leading" secondItem="mUQ-1j-Fv8" secondAttribute="trailing" constant="20" id="hIM-Pr-g9M"/>
+                                                <constraint firstItem="mUQ-1j-Fv8" firstAttribute="leading" secondItem="yFH-Rs-g8c" secondAttribute="trailing" constant="5" id="hcV-s1-4ei"/>
+                                                <constraint firstItem="yFH-Rs-g8c" firstAttribute="top" secondItem="5dQ-g3-V1q" secondAttribute="topMargin" constant="7" id="upA-fL-pFC"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="88" id="3Oa-Jg-Or2">
@@ -3012,12 +3092,16 @@
                         </connections>
                     </tableView>
                     <connections>
+                        <outlet property="endTimeBtn" destination="hAT-on-pNq" id="CB6-Re-YCO"/>
                         <outlet property="firstAddress" destination="bZM-Xi-ghv" id="EwJ-JE-jzv"/>
                         <outlet property="goodsNameTF" destination="WOa-uS-Bzo" id="zfo-fs-Zd1"/>
                         <outlet property="goodsTypeBtn" destination="TM0-8k-6qW" id="YfD-LE-kMy"/>
                         <outlet property="goodsVaulesTF" destination="CY0-mt-fa6" id="6Op-HY-X5r"/>
                         <outlet property="goodsWeight" destination="xAt-E9-5ny" id="t3W-PO-USV"/>
+                        <outlet property="pgWay" destination="9B4-5N-EG5" id="Gfh-IF-dkY"/>
+                        <outlet property="rgWayBtn" destination="jsU-ne-hP7" id="X0n-FA-fKm"/>
                         <outlet property="secondAddress" destination="Wvf-jh-bSq" id="DTh-Nu-bA8"/>
+                        <outlet property="startTimeBtn" destination="mUQ-1j-Fv8" id="DIj-ZY-g9Q"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E1w-cR-rgN" userLabel="First Responder" sceneMemberID="firstResponder"/>
